frontend/src/styles/index.scss
/* ... */
#overlay {
	position: fixed;
	z-index: 1;
}

.tooltip .user,
.user-profile .user {
	min-width: 200px;

	display: grid;
	grid-template-columns: 64px auto;
	/* grid-template-rows: 64px; */
	grid-template-rows: auto;
	/* grid-template-areas: "avatar name" "info info"; */
	grid-template-areas: "avatar info";
	gap: 8px;

	/* & > .name { */
	/* grid-area: name; */
	/* } */

	& .name {
		/* grid-area: name; */
		font-weight: bold;
	}

	& > .avatar {
		grid-area: avatar;
		height: 64px;
	}

	& > .info {
		grid-area: info;
	}

	& h3 {
		font-size: 1em;
		font-weight: bold;
	}
}

.attachments {
	display: flex;
	overflow-x: auto;
	max-width: 100%;
	margin-bottom: 8px;
	scrollbar-width: none;

	& > li:not(.raw) {
		background-color: $bg-300;
		padding: 4px;
	}

	& > li {
		min-width: 0;
	}
}

.input li .media {
	max-height: min(30vh, 500px);
}

summary {
	cursor: pointer;
}

.icon {
	height: 1em;
	width: 1em;
	filter: invert(0.9);
}

.room-settings-members {
	& > li {
		border: solid $sep-500 1px;
		background: $bg-300;
		margin-top: 4px;
		padding: 4px;
		display: grid;

		& > .name {
			font-size: 1em;
			font-weight: bold;
		}

		& > .roles {
			display: flex;
			gap: 4px;

			& li {
				border: solid $sep-500 1px;
			}

			& button {
				background: $bg-200;

				&:hover {
					background: $bg-300;
				}
			}
		}
	}
}

.room-settings-roles {
	display: flex;
	height: 100%;

	& .role-main {
		flex: 1;
	}

	& .role-main,
	.role-edit {
		padding: 0.25rem;
		overflow-y: auto;
	}

	.role-list,
	.role-edit {
		& button {
			background: $bg-200;
			border: solid $sep-500 1px;

			&:hover {
				background: $bg-300;
			}
		}
	}

	& .role-list > li {
		border: solid $sep-500 1px;
		background: $bg-300;
		margin-top: 4px;
		padding: 4px;
		cursor: pointer;

		& .info {
			display: flex;
			gap: 4px;
		}

		& .spacer {
			flex: 1;
		}

		& .name {
			font-size: 1em;
			font-weight: bold;
		}
	}

	& .role-edit {
		background: $bg-300;
		min-width: 300px;
		overflow-y: auto;

		& h3 {
			font-size: 1em;
			font-weight: bold;
		}

		& textarea,
		input[type="text"] {
			border: solid $sep-500 1px;
			background: $bg-200;
		}

		& button[disabled] {
			background: $bg-300;
		}
	}
}

/* FIXME: text alignment with uuids */
/* uuids have ascenders (tall glyphs) but no descenders (eg. qgyj) making code containing uuids look unbalanced */
code {
	padding: 0px 2px;
}

.room-settings-audit-log {
	& > li {
		border: solid $sep-500 1px;
		background: $bg-300;
		margin-top: 4px;
		padding: 4px;

		& .info {
			display: flex;
			gap: 4px;
		}

		& h3 {
			font-size: 1em;
			font-weight: bold;
		}

		& .spacer {
			flex: 1;
		}

		& button {
			background: $bg-200;
			border: solid $sep-500 1px;

			&:hover {
				background: $bg-300;
			}
		}
	}
}

.light {
	color: $fg-300;
}

.avatar {
	height: 64px;
	width: 64px;
	display: block;
	object-fit: contain;
	background: $bg-100;
	border-radius: 8px;

	/* should probably add a way to crop images in browser */
	/* object-fit: cover; */
	/* image-rendering: crisp-edges; */
}

.dropdown {
	display: inline-block;
	background: $bg-300;
	border: solid $sep-500 1px;
	padding: 0 2px;
	outline: none;
	cursor: pointer;
}

.dropdown-items {
	background: $bg-300;
	border: solid $sep-500 1px;
}

.floating {
	position: fixed;
	top: 0;
	left: 0;
}

.dropdown-items > ul {
	list-style: none;
}

.dropdown-items > ul > li {
	padding: 2px 4px;
	user-select: none;

	&:hover,
	&.hovered {
		background: $bg-200;

		&.selected {
			background: $bg-100;
		}
	}

	&.selected {
		/* box-shadow: inset 2px 0 0 $link-100; */
		background: $bg-150;
	}
}

input[type="range"] {
	appearance: auto;
	accent-color: $link-500;
}

.range {
	display: grid;
	grid-template-areas: "input input" "text dim";

	& > input {
		grid-area: input;
	}

	& > .dim {
		align-self: center;
	}

	& > .value {
		text-align: right;
	}
}

pre.numbered {
	counter-reset: line;

	& > code::before {
		counter-increment: line;
		content: counter(line);
		text-align: right;
		display: inline-block;
		color: $fg-500;
		width: 2ch;
		margin-right: 1em;
		user-select: none;
	}
}

.warn {
	color: $warn-500;
}

.error {
	color: $error-500;
}

.chat > .list > li.time-split {
	display: flex;
	color: $fg-600;
	font-size: 0.9rem;
	align-items: center;
	gap: 8px;
	margin: 2px 8px;

	& > hr {
		flex: 1;
		border-bottom: solid $sep-500 1px;
	}

	& > time {
		/* HACK: visually center text */
		margin-top: -1px;
	}
}

input[type="checkbox"] {
	appearance: checkbox;
}

button[disabled] {
	cursor: not-allowed;
}

.debug {
	padding: 16px;
	overflow: auto;

	& > details {
		border: solid $sep-500 1px;
		padding: 8px;

		& > summary {
			list-style: none;
		}
	}

	& textarea,
	input[type="text"] {
		border: solid $sep-500 1px;
		background: $bg-300;
	}
}

.embed {
	display: inline-grid;
	grid-template-columns: minmax(0, 1fr) auto;
	grid-template-rows: auto auto auto;
	grid-template-areas: "info thumb" "info thumb" "media media";
	/* width: 20em; */
	background: $bg-150;
	border: solid $sep-500 1px;
	margin-bottom: 4px;

	&.color {
		box-shadow: inset 4px 0 var(--color);
		padding-left: 4px;
	}

	& > .thumb {
		grid-area: thumb;
		width: 64px;
		padding: 8px;
	}

	& > .info {
		grid-area: info;
		padding: 8px;
		max-width: 320px;

		& .title {
			font-weight: bold;
		}

		& a.title {
			color: $link-400;
		}

		& .site {
			color: $fg-500;
		}

		& > .description {
			/* yeah i have no idea what the fuck the css spec is doing either */
			display: -webkit-box;
			-webkit-line-clamp: 3;
			-webkit-box-orient: vertical;
			overflow: hidden;
			margin-top: 8px;
		}
	}

	& > .media {
		grid-area: media;
		background: $bg-150;
	}
}

a:focus-visible {
	background: $link-500;
	color: $fg-100;
}

/* HACK: blockquote markdown parsing */
blockquote {
	white-space: normal;
}

blockquote {
	border-left: solid $sep-800 3px;
	margin: 2px 0;
	padding-left: 8px;
}
/* ... */

